--- a/pkg/shipment/templates/shipment/new_shipment.html
+++ b/pkg/shipment/templates/shipment/new_shipment.html
@@ -107,7 +107,7 @@
                             <hr class="my-4">
 
                             <div class="form-group text-center">
-                                {{ form.submit(class_="btn btn-primary btn-lg px-5") }}
+                                {{ form.submit(class_="btn btn-primary w-100 w-md-auto px-md-5") }}
                             </div>
                         </form>
                     </div>
