--- a/pkg/admin/templates/admin/all_shipments.html
+++ b/pkg/admin/templates/admin/all_shipments.html
@@ -4,6 +4,9 @@
 <div class="container-fluid py-4">
 
     <!-- Header -->
+    <a href="{{ url_for('bpadmin.dashboard') }}" class="btn btn-light me-3">
+        <i class="fas fa-arrow-left"></i>
+    </a>
     <div class="d-flex align-items-center mb-4 justify-content-between">
         <h3 class="mb-0">All Shipments</h3>
         <div>
