--- a/pkg/admin/templates/admin/assign_agents.html
+++ b/pkg/admin/templates/admin/assign_agents.html
@@ -64,8 +64,12 @@
 <div class="container-fluid py-4">
 
     <div class="d-flex align-items-center mb-4">
-        <h3 class="mb-0">Agent Assignment</h3>
+        <a href="{{ url_for('bpadmin.dashboard') }}" class="btn btn-light me-3">
+            <i class="fas fa-arrow-left"></i>
+        </a>
+        <h3 class="mb-0">Assign Management</h3>
     </div>
+
 
     <div class="row justify-content-center mb-3">
         <div class="col-lg-12">
