--- a/pkg/templates/about.html
+++ b/pkg/templates/about.html
@@ -98,8 +98,8 @@
                         <img class="card-img-top" src="{{url_for('static', filename='img/team-1.jpg')}}" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <span>Designation</span>
+                                <h5 class="font-weight-bold">Ahmed Bello</h5>
+                                <span>Director of Logistics</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -115,8 +115,8 @@
                         <img class="card-img-top" src="{{url_for('static', filename='img/team-2.jpg')}}" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <span>Designation</span>
+                                <h5 class="font-weight-bold">Daniel Okafor</h5>
+                                <span>Fleet & Transportation Manager</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -132,8 +132,8 @@
                         <img class="card-img-top" src="{{url_for('static', filename='img/team-3.jpg')}}" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <span>Designation</span>
+                                <h5 class="font-weight-bold">Rebecca Williams</h5>
+                                <span>Warehouse & Inventory Supervisor</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -149,8 +149,8 @@
                         <img class="card-img-top" src="{{url_for('static', filename='img/team-4.jpg')}}" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <span>Designation</span>
+                                <h5 class="font-weight-bold">Michael Adeyemi</h5>
+                                <span>Operations Manager</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
