--- a/pkg/templates/includes/header.html
+++ b/pkg/templates/includes/header.html
@@ -95,25 +95,37 @@
                     {% if user_id %}
                     <a href="{{ url_for('bpuser.dashboard') }}" class="nav-item nav-link active">Dashboard</a>
                 {% endif %}
+                {% if not user_id %}
+                        <a href="{{ url_for('bpuser.signup') }}" class="nav-item nav-link d-lg-none">
+                            Register
+                        </a>
+                        <a href="{{ url_for('bpuser.login') }}" class="nav-item nav-link d-lg-none">
+                            Login
+                        </a>
+                    {% else %}
+                        <a href="{{ url_for('bpuser.logout') }}" class="nav-item nav-link text-danger d-lg-none">
+                            Logout
+                        </a>
+                {% endif %}
                 </div>
-                <div class="d-flex align-items-center">
+                <div class="d-none d-lg-flex align-items-center">
                     {% if user_id %}
-                        <div class="nav-item dropdown d-none d-lg-block">
-                            <a href="#" class="btn btn-secondary py-2 px-4 dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-user-circle mr-1"></i> {{u.full_name|capitalize  }}
+                        <div class="nav-item dropdown">
+                            <a href="#" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-user-circle mr-1"></i>
+                                {{ u.full_name | capitalize }}
                             </a>
-                            <div class="dropdown-menu rounded-0 m-0 dropdown-menu-right">
-                                <a href="{{ url_for('bpuser.dashboard') }}" class="dropdown-item active">Dashboard</a>
-                                <div class="dropdown-divider"></div>
+                            <div class="dropdown-menu dropdown-menu-right">
+                                <a href="{{ url_for('bpuser.dashboard') }}" class="dropdown-item">Dashboard</a>
                                 <a href="{{ url_for('bpuser.logout') }}" class="dropdown-item text-danger">Logout</a>
                             </div>
                         </div>
-                        <a href="{{ url_for('bpuser.logout') }}" class="btn btn-danger py-2 px-4 d-lg-none">Logout</a>
                     {% else %}
-                        <a href="{{ url_for('bpuser.signup') }}" class="btn btn-primary py-2 px-4 d-none d-lg-block mx-2">Register</a>
-                        <a href="{{ url_for('bpuser.login') }}" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
+                        <a href="{{ url_for('bpuser.signup') }}" class="btn btn-primary mx-2">Register</a>
+                        <a href="{{ url_for('bpuser.login') }}" class="btn btn-primary">Login</a>
                     {% endif %}
                 </div>
+                
             </div>
         </nav>
     </div>
