--- a/pkg/templates/index.html
+++ b/pkg/templates/index.html
@@ -109,7 +109,8 @@
                 <!-- Right Stats -->
                 <div class="col-lg-6">
                     <div class="row g-3">
-                        <div class="col-4">
+                        
+                        <div class="col-12 col-sm-6 col-lg-4">
                             <div class="stats-card">
                                 <div class="stat-icon">
                                     <i class="fas fa-box"></i>
@@ -118,7 +119,8 @@
                                 <div class="stat-label">Deliveries</div>
                             </div>
                         </div>
-                        <div class="col-4">
+                
+                        <div class="col-12 col-sm-6 col-lg-4">
                             <div class="stats-card">
                                 <div class="stat-icon" style="background: linear-gradient(135deg, #11998e 0%, #38ef7d 100%);">
                                     <i class="fas fa-users"></i>
@@ -127,7 +129,8 @@
                                 <div class="stat-label">Customers</div>
                             </div>
                         </div>
-                        <div class="col-4">
+                
+                        <div class="col-12 col-sm-6 col-lg-4">
                             <div class="stats-card">
                                 <div class="stat-icon" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
                                     <i class="fas fa-clock"></i>
@@ -136,8 +139,10 @@
                                 <div class="stat-label">On-Time</div>
                             </div>
                         </div>
+                
                     </div>
                 </div>
+                
             </div>
         </div>
     </div>
